clang/test/BSC/Negative/OwnedStruct/tag-name/generic-struct-tag-name.cbs
// RUN: %clang_cc1 -verify %s

_Owned struct D<T> {

};

_Owned struct D<int> b; // expected-error {{must ignore '_Owned struct' tag before struct name}}
                       // expected-error@-1 {{type of global variable cannot qualified by '_Owned'}}
int _Owned struct D<T>::f() { // expected-error {{must ignore '_Owned struct' tag before struct name}}
                             // expected-error@-1 {{type of 'int' cannot be qualified by '_Owned'}}
    return 0;
}
struct F<T>; 
_Owned struct F<T> {}; // expected-error {{inconsistent tag before struct name}}
int main() {
    _Owned struct D<float> c; // expected-error {{must ignore '_Owned struct' tag before struct name}}
    return 0;
}